# vending_machine_cpp

./: Automat.cpp  Automat.h  Blik.cpp  Blik.h  CMakeLists.txt  Karta.cpp  Karta.h  Napoj.cpp  Napoj.h  Odczyt.h  Platnosc.cpp  Platnosc.h  README.md  main.cpp  stdin.txt
